--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'Fairy tales'
+- GITenberg
 tableOfContents: Snegorotchka, a Russian fairy tale -- The buried moon, an English
   fairy tale -- White Caroline and Black Caroline, a Flemish fairy tale -- The seven
   conquerors of the Queen of the Mississippi, a Belgian fairy tale -- The serpent
